spacing issue resolved on cards

--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,10 @@
     box-sizing: border-box;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 h3 {
   font-family: 'Quicksand', sans-serif;
   font-weight: 600;
@@ -75,6 +79,16 @@ a {
   color: black;
   
 }
+
+.content-card h3 {
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-decoration: none;
+  text-overflow: ellipsis;
+}
+
 
 .vote-box {
   display: flex;
@@ -181,6 +195,7 @@ form input {
   opacity: 1;
   right: 10px;
 }
+
 .css-button-arrow--red:after {
   content: "\00BB";
   position: absolute;
@@ -198,8 +213,10 @@ form input {
 }
 
 .card-image {
-  width: 100%;
+  width: 300px;
+  object-fit: cover;
   border-radius: 20px 20px 0px 0px;
+  height: 200px;
 }
 
 .votes-overlay {
@@ -219,22 +236,24 @@ form input {
 
 
 .content-card {
-  margin: 20px;
-  display: flex;
-
-  width: 300px;
-  max-width: 875px;
+    margin: 20px;
+    display: flex;
+    width: 300px;
+    max-width: 875px;
     background-color: whitesmoke;
     border-radius: 20px;
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
     box-shadow: 0 .1rem 1rem rgba(0, 0, 0, 0.1);
+    transition: transform 0.2s ease-in-out;
+    &:hover {
+      transform: scale(1.05);
+      cursor: pointer;
+      box-shadow: 0 0 .2px .1px rgba(255, 255, 255, 0.271);
+    }
 }
 
-.content-card img {
-  width: 100%;
-}
 
 .loader {
     border: 16px solid #f3f3f3; /* Light grey */
